# local_adaptive_binarization

./: .gitignore  CMakeLists.txt  FILE_LICENSE  LocalAdaptiveBinarization.podspec
python/: main.py  nibalck_thresholding.py
src/: main.cpp  niblack_thresholding.cpp  niblack_thresholding.hpp  precomp.hpp
