cmake_minimum_required(VERSION 2.8)
project( AdaptiveBinarization )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
MESSAGE( STATUS "OpenCV_INCLUDE_DIRS:         " ${OpenCV_INCLUDE_DIRS} )
add_executable( ab src/main.cpp src/niblack_thresholding.cpp)
target_link_libraries( ab ${OpenCV_LIBS} )
